# scix-agent

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  STATUS.md  ads_metadata_year_2021-2023.py  aovpvgpll8aa4bcpkouusquc0menuet6.darc  egpa6antsggqpm9coo2djuinu9lmvfma  m8tthbhpt55ef9nqsschtutrlnvpjneu.darc  manifest  ntejeomt0qkpfirt5doofj9od8sukfii.darc  oikekftgoi6nukulr6pfsnubd5v4orqe.darc  paper_outline.md  prd_community_detection_refinement.md  prd_entity_enrichment_strategy.md  prd_knowledge_enrichment.md  premortem_indus_integration_mcp_consolidation.md  pyproject.toml  schema.sql  u09hn6j8tcpdhotlfqqnqirhhvepjltr
.beads/: config.yaml  metadata.json
.claude/: prd-build.log.md  prd-build.state.json
build-artifacts/: ambiguity_audit.md  curated_core.csv  curated_core_stratification.md  dag.json  eval_report.md  extraction-quality-eval.md  extraction-quality-gate.md  m13_latency.md  m45_consistency.md  m45_lane_delta.md  m4_inhouse_eval.md  plan-deterministic-normalization.md  plan-enrich-wikidata-multi.md  plan-harvest-ascl.md  plan-harvest-astromlab.md  plan-harvest-pds4-v2.md  plan-harvest-physh.md  plan-harvest-pwc.md  plan-harvest-spdf.md  plan-harvest-vizier.md  plan-http-client.md  plan-link-entities.md  plan-mcp-paper-tools.md  plan-mcp-query-logging.md  plan-spase-harvester-update.md  plan-ssodnet-harvester.md  plan-wikidata-cross-linking.md  research-citation-context-pipeline.md  research-citation-intent-classifier.md  research-deterministic-normalization.md  research-dict-schema-module.md  research-extraction-quality-eval.md  research-harvest-aas.md  research-harvest-ads-data.md  research-harvest-astromlab.md  research-harvest-gcmd-v2.md  research-harvest-pds4.md  research-harvest-pwc.md  research-harvest-spase.md  research-harvest-spdf.md  (+14 more)
config/: planetary_cohort.yaml  publisher_suppress_list.yaml  ssodnet_author_surname_overlap.txt
deploy/: .env.example  CLIENT_SETUP.md  Dockerfile  README.md  docker-compose.yml  qdrant-compose.yml  qdrant-run.sh  run.sh
docs/: ADS_INTEGRATION.md  DEPLOYMENT.md  PARITY_PLAYBOOK.md  UPGRADING.md  briefing.md  citation_contexts_coverage.md  citation_grounded.md  external_data_sources.md  full_text_coverage_analysis.md  mcp_dual_lane_contract.md  mcp_tool_audit_2026-04.md  mcp_tool_contracts.md  paper_outline.md  premortem_external_data_integration.md  runbook_populate_papers_fulltext.md  runbook_qdrant_pilot.md  section_schema_contract.md
eval/: build_gold_standard.py  claim_extraction_gold_standard.jsonl  claim_extraction_gold_standard_README.md  retrieval_50q.jsonl
migrations/: 001_initial_schema.sql  002_ingest_log.sql  003_search_infrastructure.sql  004_per_model_hnsw_and_pg_search.sql  005_pgvector_upgrade.sql  006_graph_metrics.sql  007_uat_concepts.sql  008_community_taxonomic.sql  009_knowledge_enrichment.sql  010_body_column.sql  011_citation_contexts.sql  012_full_field_coverage.sql  013_entity_dictionary.sql  013_query_log.sql  014_discipline_and_indexes.sql  015_staging_schema.sql  016_query_log.sql  017_entity_provenance.sql  018_openalex_linking.sql  019_schema_migrations.sql  020_harvest_runs.sql  021_entity_graph.sql  022_staging_entities.sql  023_logged_embeddings.sql  024_agent_context_views.sql  (+43 more)
(+924 files in other folders)
