[project]
name = "scix-experiments"
version = "0.1.0"
description = "AI/ML experiments on scientific literature — making knowledge navigable by agents"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "wordfreq>=3.1",
    "pyahocorasick>=2.0",
    "scikit-learn>=1.3",
    "beautifulsoup4>=4.12",
    "rdflib>=7.0",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.3",
    "libcst>=1.1",
    "hypothesis>=6.100",
]
embed = [
    "transformers>=4.36",
    "torch>=2.1",
]
search = [
    "sentence-transformers>=2.6",
]
mcp = [
    "mcp>=1.2,<2.0",
]
analysis = [
    "matplotlib>=3.7",
]
docling = [
    "docling>=2.0",
]
graph = [
    "python-igraph>=0.11",
    "leidenalg>=0.10",
]
ner_eval = [
    "seqeval>=1.2",
    "datasets>=2.14",
    "transformers>=4.36",
    "torch>=2.1",
]
ner_pass = [
    # GLiNER zero-shot NER for the dbl.3 backfill pass.
    # Pulled in transformers 5.x and torch 2.10+ when first installed.
    "gliner>=0.2.26",
    "transformers>=5.0",
    "torch>=2.10",
]
viz = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "orjson>=3.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests", "scripts"]
markers = [
    "integration: tests requiring a running scix database",
]
